test/conformance/chainsaw/image-validating-policies/standard/cosign-keyless-additional-extensions/fail/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: fail
spec:
  concurrent: false
  steps:
    - name: create policy
      use:
        template: /../../../_step-templates/create-policy.yaml
        with:
          bindings:
            - name: file
              value: policy.yaml
    - name: wait-policy-ready
      use:
        template: /../../../../_step-templates/image-validating-policy-ready.yaml
        with:
          bindings:
            - name: name
              value: check-keyless-extensions-fail
    - name: create pod
      try:
        - script:
            content: kubectl run test-keyless-fail -n $NAMESPACE --image=$TEST_IMAGE_URL
            check:
              ($error != null): true
